# MONet-pytorch

./: LICENSE  pyproject.toml  readme.md
.github/workflows/: build-and-test.yaml
monet_pytorch/: __init__.py  attention_net.py  init_config.py  model.py  nn_utils.py  paths.py  unet.py
monet_pytorch/config/dataset/: clevr_6.yaml  multidsprites_colored_on_colored.yaml  multidsprites_colored_on_grayscale.yaml  tetrominoes.yaml
monet_pytorch/config/model/: monet-iodine.yaml  monet-lightweight.yaml  monet.yaml
monet_pytorch/config/special_cases/: monet-clevr_6.yaml  monet-iodine-tetrominoes.yaml  monet-lightweight-multidsprites_colored_on_grayscale.yaml  monet-lightweight-tetrominoes.yaml  monet-tetrominoes.yaml
monet_pytorch/template/: encoder_decoder.py  sequential_cnn.py
tests/: test_init_monet.py  test_prediction.py
