[tool.poetry]
name = "monet-pytorch"
version = "1.0.1"
description = "Pytorch implementation of Multi-Object Network(MONet)"
authors = ["mikedev <mik3dev@gmail.com>"]
license = 'MIT'
repository = 'https://github.com/Michedev/MONet-pytorch'
keywords = [
    'deep learning',
    'pytorch',
    'monet',
    'neural network',
    'artificial intelligence'
]

classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Development Status :: 5 - Production/Stable'
]

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=1.8,<=1.12.0"
path = ">=15.0,<=16.4.0"
hydra-core = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

